--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "uran1980/ethereum-rpc",
   "type": "library",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "description": "Ethereum (geth) RPC client",
   "keywords": [
     "ethereum",
@@ -11,7 +11,7 @@
   ],
   "license": "MIT",
   "require": {
-    "php": "^7.1.0",
+    "php": ">=7.1.0",
     "ext-bcmath": "*",
     "ext-json": "*",
     "furqansiddiqui/http-client": "^0.4.5"
